--- a/220703 실습.md
+++ b/220703 실습.md
@@ -16,7 +16,64 @@
 
 
 
-## 2. BeautifulSoup, Pandas 라이브러리 이용한 HTML 크롤링 실전예제
+## 2. vscode에서 jupyter notebook 구동 방법
+1. Python extension 설치
+   vscode에서 jupyter notebook를 사용하려면, 우선적으로 Python extension이 설치되어야 한다.  
+   이는 Microsoft에서 배포하며, 이를 설치하면 자동적으로 Jupyter extension이 설치된다.
+   
+   
+   `The Python extension will automatically install the Pylance and Jupyter extensions to give you the best experience when working with Python files and Jupyter notebooks.`
+2. jupyter notebook 파일 생성
+   `Ctrl+Shift+P` 단축기를 이용하여, Command Palette를 실행한 후, jupyter notebook 파일을 생성한다.  
+   (파일 형식: *.ipynb)
+   
+   
+   ![image](https://user-images.githubusercontent.com/106735612/177044051-5e1f0c1d-28e6-4cf5-a9ce-b6210cf38047.png)
+3. Python file(\*.py)로 Export  
+   Export 클릭 > Command Palette에서 Python Script를 선택한다.
+   
+   
+   ![image](https://user-images.githubusercontent.com/106735612/177044965-24fa1e32-494b-41f4-9156-350d63e24c23.png)
+
+***
+* 자주 쓰는 단축키 정리
+   * `Esc`: 셀 edit 모드 -> command 모드 변환
+   * `Ctrl+Enter`: 선택한 셀 run
+   * `A` / `B`: 선택한 셀 바로 위 셀/ 아래 셀 추가
+   * `Del`: 선택한 셀 삭제
+   * `Ctrl+A`: 전체 셀 선택
+
+* 디버깅
+   1. 아래와 같이 혹은 `Ctrl+Alt+Shift+Enter' 단축키를 이용하여 디버깅을 할 수 있다.  
+      ![image](https://user-images.githubusercontent.com/106735612/177044468-348dc50a-b3ae-47c6-8c5b-478f097657ff.png)
+
+   2. 아래와 같이 중단점도 걸 수 있다.  
+      ![image](https://user-images.githubusercontent.com/106735612/177044649-3d63c484-e74a-4f3c-be08-7f9ed71c28d6.png)
+
+   3. 디버깅 단축키는 웹 F12 개발자도구에서의 단축키와 비슷하다.
+      * `F5`: 다음 중단점까지 실행
+      * `F10`: 단위 실행
+* Plot 생성
+   ```
+   import numpy as np
+   import pandas as pd
+   import matplotlib.pyplot as plt
+
+   x = [21, 22, 23,4,5,6,77,8,9,10,31,32,33,34,35,36,37,18,49,50,100]
+   num_bins = 5
+   plt.hist(x, num_bins)
+   plt.show()
+   ```
+   ![image](https://user-images.githubusercontent.com/106735612/177044804-48c60761-5a92-4b9a-9363-8f6e7a50c631.png)
+
+ 
+
+* 참고 사이트: https://code.visualstudio.com/docs/datascience/jupyter-notebooks<br><br>
+  
+
+
+
+## 3. BeautifulSoup, Pandas 라이브러리 이용한 HTML 크롤링 실전예제
 ### 도드람 2021-2022 V-리그 남자부 전체 득점 기록 크롤링하기
 1. 필요 라이브러리 import하기
     
@@ -113,28 +170,28 @@
 
 6. 전체 코드
     ```
-    # 2.1. 필요 라이브러리 import하기
+    # 1. 필요 라이브러리 import하기
     from bs4 import BeautifulSoup
     import requests
     import pandas as pd
     
-    # 2.2. requests 라이브러리로 HTML 데이터 요청하여 갖고 오기
+    # 2. requests 라이브러리로 HTML 데이터 요청하여 갖고 오기
     url = 'https://www.kovo.co.kr/stats/42001_team-totalrecord.asp'
 
     html = requests.get(url, verify=False)
 
-    # 2.3. BeautifulSoup 라이브러리로 파싱하기
+    # 3. BeautifulSoup 라이브러리로 파싱하기
     soup = BeautifulSoup(html.content, 'html.parser')
     html.close()
 
-    # 2.4.1. 필요한 데이터 추출하기: column 정보
+    # 4.1. 필요한 데이터 추출하기: column 정보
     col_list = [] # 테이블 columns
     col_data = soup.findAll("th", scope="col")
 
     for item in col_data:
         col_list.append(item.text) # 컬럼명 # ['순위', '팀', '경기수', '세트수', '공격', '블로킹', '서브', '득점']
 
-    # 2.4.2. 필요한 데이터 추출하기: row 정보
+    # 4.2. 필요한 데이터 추출하기: row 정보
     row_data = soup.select("table > tbody > tr > td") # table rows
 
     dataset = []
@@ -147,7 +204,7 @@
 
         dataset[row_idx].append(item.text)
 
-    # 2.5. pandas 라이브러리로 DataFrame 생성하기
+    # 5. pandas 라이브러리로 DataFrame 생성하기
     df = pd.DataFrame(dataset, columns=col_list)
     df
     ```
