--- a/1.Document/20220711.md
+++ b/1.Document/20220711.md
@@ -23,3 +23,91 @@ for i in range(1, 8):
 
   따라서 데이터 수집에 있어 중요 변수인 기록 카테고리, 시즌 년도 별로 각 __column,row 개수__ 만 변수로 지정해 준다면, 이 코드를 함수화하여 지속적으로 사용할 수 있다.
   
+
+
+# 3. 파라미터를 dictionary 자료형 응용하여 정리하기
+* 해당 예제 url: 'https://www.kovo.co.kr/stats/42001_team-totalrecord.asp'
+
+    ## 3.1. 파라미터의 정보를 얻고, 그 변수명을 List로 정리하기
+    우선 이 예제에서 request 요청 시 보내는 모든 파라미터의 정보를 얻으려면, 해당 페이지의 `기록보기` 버튼을 클릭한다.  
+    그럼 아래와 같은 새로운 url을 얻을 수 있다.
+    
+    ![image](https://user-images.githubusercontent.com/106735612/180022347-f54cb985-bfe6-4e86-9660-0ff3a1a82109.png)
+    
+    해당 페이지 request 요청 시, 파라미터는 s_part, spart, s_season, s_pr, e_season, e_pr, part 총 7개이다.  
+    우리는 이 중 남자부,여자부를 구분하는 `s_part`와 null값을 보내는 `spart`를 제외할 것이다.  
+    그러면 5개가 남는데, 이는 select 태그를 이용해서 사용자가 값을 선택할 수 있는 파라미터이다.  
+    ```
+    param_names = ['s_season', 's_pr', 'e_season', 'e_pr', 'part']
+    ```
+    
+    
+    ## 3.2. 변수명에 따라 해당 변수 데이터 추출하기
+    지금까지 해온 예제들은 모두 tbody 안의 태그들을 이용해 추출해왔지만, 이 예제는 다르다.  
+    아래의 캡처를 보면, 모두 combobox 형태를 지니고 있다.  
+    ![image](https://user-images.githubusercontent.com/106735612/180023985-93361c27-abb7-4e40-8fa0-b34b9363fb03.png)
+    
+    이들의 HTML 태그를 살펴보면, 모두 select 태그로 표현되며, 각 name의 속성이 3.1.에서 정리한 name과 동일함을 알 수 있다.
+    ![image](https://user-images.githubusercontent.com/106735612/180025449-611fe6c9-1502-46e9-bab5-e2658f38f78d.png)  
+    
+    
+    이를 통해, 아래의 코드와 같이 데이터를 추출할 수 있다.
+    ```
+    for name in param_names:
+        selects = soup.find('select', {'name': name})
+    ```
+    
+    
+    ## 3.3. 각 파라미터 별 option들을 key, value로 dictionary 객체에 넣기
+    우선, 각 파라미터 별로 option의 개수가 몇 개인지 알 수 없기 때문에, enumerate 내장함수를 사용한다.
+    ```
+    for name in param_names:
+        selects = soup.find('select', {'name': name})
+        for i, option in enumerate(selects):
+            print(str(i)+ " ::: " + str(option))
+    ```  
+    ![image](https://user-images.githubusercontent.com/106735612/180027838-4ff0c4f7-87f0-4c95-91bf-6ca9924ae950.png)
+    
+    우리가 필요한 option 데이터는 홀수 index 일때만이므로, if문을 사용한다.
+    ```
+    if i % 2 != 0:
+    ```
+    
+    
+    또한, 다음과 같은 key, value로 정리한다.
+          
+        
+    * `key`: option태그의 value 속성. split()을 이용해서 값을 가져온다. __str(option).split('value="')[1].split('">')[0]__
+    * `value`: option태그의 innerHTML. __option.get_text()__
+
+    ***
+    지금까지의 코드 결과값은 아래와 같다.      
+    ![image](https://user-images.githubusercontent.com/106735612/180029890-2e90dfa2-2011-4332-8d8b-701904f027d4.png)
+    
+    
+    따라서 각 변수명별(name) key, value 정보를 dictionary 객체에 넣기 위해, 지금까지의 예제와 동일하게 temp성 객체를 생성하고, 이에 하나씩 update해준다.
+
+    
+    ## 3.4. 전체 코드    
+    ```
+    dict = {}
+    for name in param_names:
+        selects = soup.find('select', {'name': name})
+        temp_dict = {}
+        for i, option in enumerate(selects):
+            if i % 2 != 0: # 이해 조금 어려움...
+                option_value = str(option).split('value="')[1].split('">')[0]
+                temp_dict.setdefault(option_value,option.get_text())
+
+        dict.setdefault(name, temp_dict)
+    ```
+    * setdefault(key[, value]):
+        * key가 딕셔너리에 존재하면, 해당 값을 돌려준다.
+        * 그렇지 않으면, value 값을 갖는 key를 삽입한 후, value를 반환한다.
+        * value의 default는 None이다.
+        
+     
+    
+
+
+    
