--- a/1.Document/20220711.md
+++ b/1.Document/20220711.md
@@ -1,3 +1,97 @@
+# 1. Selector와 Xpath를 이용하여 데이터 추출하기
+
+## 전제조건 정리
+1. 현 예제의 테이블 컬럼 개수를 동일하게 필요한 데이터는 득점 부문만 가져온다.
+2. 1에 의해서 컬럼 리스트는 다음과 같다. ['순위', '선수', '팀', '경기수', '세트수', '시도', '성공', '공격차단', '범실', '성공률']
+3. 1과 동일하게 row 최대 개수도 동일하게 하기 위해 최대 TOP 5 선수의 기록만 가져온다.
+4. Selector는 BeautifulSoup, Xpath는 Selenium 라이브러리를 이용한다.
+
+```
+from bs4 import BeautifulSoup
+from selenium import webdriver
+import requests
+import pandas as pd
+import selenium
+import pandas
+
+url = 'https://www.kovo.co.kr/game/v-league/11302_player-ranking_view.asp?season=018&g_part=201&r_round=0&s_part=1&r_part=at&'
+cols = ['순위', '선수', '팀', '경기수', '세트수', '시도', '성공', '공격차단', '범실', '성공률']
+row_index = 5
+```
+    
+## 1.1. Selector
+해당 tbody 내에 있는 <tr>태그 중 하나를 골라 selector 복사한다.
+    
+`tab1_1 > div > table > tbody > tr:nth-child(1) :1위 선수`
+    
+위에서 선택한 <tr>태그 안의 <td> 태그 중 하나를 골라 동일하게 selector 복사를 아래와 같은 결과가 나온다.
+    
+`tab1_2 > div > table > tbody > tr:nth-child(1) > td:nth-child(1)`
+    
+정리한 코드와 그 Output은 아래와 같다.
+```
+html = requests.get(url, verify=False)
+
+if(html.status_code == 200):
+    soup = BeautifulSoup(html.content, 'html.parser')
+    html.close()
+
+tbody = soup.find('tbody') # 해당 tbody
+
+temp_data1 = []
+for i in range(1,row_index +1): # Top 5명
+    row = tbody.select_one('tr:nth-child(' + str(i) + ')') # tr 태그
+    temp_row = []
+    for j in range(1,len(cols)+1): # column 개수 10개
+        data = row.select_one('td:nth-child(' + str(j) + ')').get_text() # td 태그
+        temp_row.append(data)
+    temp_data1.append(temp_row)
+
+
+df = pd.DataFrame(temp_data1, columns=cols) # column Index만 있는 빈 DataFrame
+df
+```
+    
+![image](https://user-images.githubusercontent.com/106735612/180634482-5023b1a6-555a-4313-9496-39e73280b147.png)
+
+
+## 1.2. Xpath
+    
+해당 tbody 내에 있는 <tr>태그 중 하나를 골라 XPath 복사를 한다.
+`//*[@id="tab1_1"]/div/table/tbody/tr[1] : 1위 선수`
+
+Selenium 라이브러리를 사용하기 위해서는, 자신이 사용하는 브라우저의 driver 설치가 필요하다.
+* 참고 : https://dhznsdl.tistory.com/21
+```
+driver = webdriver.Chrome('./chromedriver.exe')
+driver.get(url)
+driver.implicitly_wait(time_to_wait=5)
+```    
+
+정리한 코드와 그 Output은 아래와 같다.
+```
+temp_data2 = []
+
+xpath = '//*[@id="tab1_2"]/div/table/tbody/tr[1]'
+
+for i in range(1,row_index +1): # Top 5명
+    rowxpath = '//*[@id="tab1_2"]/div/table/tbody/tr[' + str(i) + ']'
+    row = driver.find_elements("xpath", rowxpath)[0].text
+    temp_row = row.split() # row에서 split만 해주면 된다.
+    temp_data2.append(temp_row)
+
+
+driver.quit()
+
+df = pd.DataFrame(temp_data2, columns=cols) # column Index만 있는 빈 DataFrame
+df
+```
+    
+![image](https://user-images.githubusercontent.com/106735612/180634601-45c97474-11b9-488e-bc56-290131003a51.png)
+    
+__1.1 예제와 1.2 예제의 Output이 동일함을 알 수 있다.__
+
+
 # 2. 코드 리팩토링 후 함수화해야할 코드를 알아보고, 그 근거 작성하기
 
 ```
