모든 파라미터 요청하는 방법 문서 업로드

--- a/1.Document/모든 파라미터 요청하는 방법.md
+++ b/1.Document/모든 파라미터 요청하는 방법.md
@@ -1,5 +1,142 @@
+# 모든 파라미터에 값을 주고 request 요청하기
+
+## 1. 전제조건  
+* 지금까지의 코드를 리팩토링하여 하나의 파일로 통일하였다
+* 함수 param_call(paramdict)은 sin111111의 코드를 베이스로 하였다.
+* 해당 페이지에 요청할 수 있는 파라미터 중 s_part는 1(남자부)로 고정, spart는 무시한다.
+* dict 객체는 Index가 없는 자료형임을 인지한다.
+
+***
+
+## 2. 파라미터 데이터 추출
+* 해당 페이지에 넘길 파라미터 데이터를 추출하고, 이를 정리하기 위하여 __locals()__ 파이썬 내장함수를 사용하였다.
+    * `locals()`: 동적으로 변수 생성 시 사용하는 파이썬 내장함수.  
+                  현재 지역 변수들을 dictionary 형태로 return함.      
+                  (전역 변수들을 dictonary 형태로 return하는 함수는 globals())
+* 전에는 dictionary 의 value에 dictionary를 넣어 정리하였지만, 이번 예제부터는 locals()를 사용하여 보다 깔끔하게 정리하였다.
+```
+param_names = ['s_season', 's_pr', 'e_season', 'e_pr', 'part'] # 파라미터 이름
+
+for name in param_names:
+    temp_dict = {}
+    for option in soup.find('select', {'name' : name}).find_all('option'):
+        key = option.attrs['value'] # '018'
+        value = option.getText() # '도드람 2021-2022 V-리그'
+        temp_dict[key] = value
+
+    locals()[str(name)+ '_dict'] = temp_dict
+```
+예를 들어 `locals()['s_season_dict']`의 값은 아래와 같다.    
+
+![image](https://user-images.githubusercontent.com/106735612/182009392-5f052bf6-301a-4d91-8054-ff1338042646.png)
 
 
+## 3. 파라미터 요청 전 예외처리
+파라미터를 잘못 요청할 경우를 대비하여 기본값을 넣어주고, 다시금 요청하게끔 함수를 이용했다.
+정한 기준은 아래와 같다.
+* 매개변수: `s_season, s_pr , e_season, e_pr, part` 의 key가 들어있는 dict 자료형
+* 각각의 변수의 기본값: '001'/ '201|1'/ '018'/ '203|1'/ 'point'
+* s_season <= e_season
+* s_season == e_season이면 s_pr <= e_pr
+
+```
+def param_validate(paramdict):
+    ssk = paramdict['s_season'] if paramdict.get('s_season') != None else '001'
+    spk = paramdict['s_pr'] if paramdict.get('s_pr') != None else '201|1'
+    esk = paramdict['e_season'] if paramdict.get('e_season') != None else '018'
+    epk = paramdict['e_pr'] if paramdict.get('e_pr') != None else '203|1'
+    partk = paramdict['part'] if paramdict.get('part') != None else 'point' # 카테고리
+
+    if(int(ssk) >  int(esk)):
+        print("올바른 기간을 입력하세요.")
+        return
+    if(int(ssk) ==  int(esk) & 
+        ( int(spk.split("|")[0]) > int(epk.split("|")[0]) | 
+        ( int(spk.split("|")[0]) == int(epk.split("|")[0]) & int(spk.split("|")[1]) > int(epk.split("|")[1])))):
+        print("올바른 기간을 입력하세요.")
+        return
+
+    return {'s_seaon': ssk, 's_pr' : spk, 'e_season': esk, 'e_pr': epk, 'part': partk}
+```
+기준과 맞지 않는 파라미터를 요청할 경우 아래와 같은 메세지가 뜬다.
+
+![image](https://user-images.githubusercontent.com/106735612/182009649-c0f1fc48-ad93-41fd-8e37-2e53c5be698e.png)
+
+
+## 4. 파라미터 중 특정 값만을 주고 request를 요청하는 경우
+파라미터 중 특정 값을 주고, 이에 대한 데이터를 추출까지 하는 함수를 이용했다.
+이전과 달라진 점은 아래와 같다.
+1. 모든 파라미터 별로 rowIndex와 DataFrame 생성 시 필요한 column list가 다를 수 있으므로, 이를 따로 계산하였다.
+    * rowIndex 계산
+      ```
+      rowIndex = len(tbody_spec.find_all('td', attrs={'class':'name'})) # row 개수
+      ```
+      ![image](https://user-images.githubusercontent.com/106735612/182009965-3bbe9a00-c334-4165-9c2a-eeb2660567a2.png)
+
+    * column list 지정
+      ```
+      cols = []
+      for col in soup_spec.select('thead > tr > th'): 
+          cols.append(col.get_text()) # columnlist
+      ```
+      ![image](https://user-images.githubusercontent.com/106735612/182009981-44bb1fa4-8470-4adc-b6b2-4ab8167d5a4f.png)
+
+
+
+
+2. request 요청 시 오류가 났을 때 status_code를 알 수 있도록 print구문을 추가하였다.
+```
+def param_call(paramdict):
+    params = param_validate(paramdict) # 파라미터 요청 전 예외처리
+    html_spec = requests.get(init_url, verify=False, params=params)
+    
+    if(html_spec.status_code == 200):
+        soup_spec = BeautifulSoup(html_spec.content, 'html.parser')
+        html_spec.close()
+
+        tbody_spec = soup_spec.find('tbody') # tbody
+        
+        rowIndex = len(tbody_spec.find_all('td', attrs={'class':'name'})) # row 개수
+
+        cols = []
+        for col in soup_spec.select('thead > tr > th'): 
+            cols.append(col.get_text()) # columnlist
+
+        temp_data = []
+        for i in range(1, rowIndex + 1):
+            row = tbody_spec.select_one('tr:nth-child(' + str(i) + ')')
+            temp_array = []
+            for j in range(1,len(cols)+1):
+                data = row.select_one('td:nth-child(' + str(j) + ')').get_text()
+                temp_array.append(data)
+            temp_data.append(temp_array) # loc를 지양하기 위해 부득이하게 수정            
+
+    else:
+        print("param_call Request ERROR ::: " + str(params) + " ===> status code ::: " + str(html_spec.status_code))
+        return
+
+    return {'data': temp_data, 'cols' : cols}
+```
+예를 들어 '도드람 2021-2022 V-리그'의 '공격'기록 데이터를 보고 싶다면, 아래와 같다.
+
+![image](https://user-images.githubusercontent.com/106735612/182010025-9b4cf8b2-ddb2-4353-85d4-06333245c2f7.png)
+
+
+## 5. 파라미터 모든 값에 대하여 request를 요청하는 경우
+```
+for name in param_names: # param_names = ['s_season', 's_pr', 'e_season', 'e_pr', 'part'] 
+    for dict_key in locals()[str(name) + '_dict'].keys(): # dict_key = 's_season'
+        print("param_name :::: " + name + " && key :::: " + dict_key)
+        
+        table_data_dict = param_call({name:dict_key})
+
+        df = pd.DataFrame(data=table_data_dict['data'], columns=table_data_dict['cols'])
+```
+아래와 같이 모든 파라미터에 대한 request 요청이 가능하다
+
+![image](https://user-images.githubusercontent.com/106735612/182010085-1cfa1ac7-9ef5-4fed-abd6-8afd75310487.png)
+
+## 6. 전체코드
 ```
 # 라이브러리 import
 from bs4 import BeautifulSoup
@@ -19,7 +156,7 @@ if(html.status_code == 200):
     html.close()
 else:
     print("Request ERROR ::: status code ::: " + str(html.status_code)) # 항상 에러 발생을 염두에 두자..
-    
+
 # 파라미터 데이터 추출
 param_names = ['s_season', 's_pr', 'e_season', 'e_pr', 'part'] # 파라미터 이름
 
@@ -32,23 +169,7 @@ for name in param_names:
 
     locals()[str(name)+ '_dict'] = temp_dict
 
-
-'''
-locals() :
-Update and return a dictionary representing the current local symbol table.
-Free variables are returned by locals() when it is called in function blocks, but not in class blocks
-
-동적으로 변수 생성 시 사용하는 파이썬 내장함수.
-현재 지역 변수들을 dictionary 형태로 return함. (전역 변수들을 dictonary 형태로 return하는 함수는 globals())
-'''
-
 # 파라미터 요청 전 예외처리
-# ( s_season, s_pr , e_season, e_pr )
-# 1. s_pr == null 이면 s_pr = '201|1'로 지정. e_pr == null 이면 e_pr = '203|1'
-# 2. s_season == null 이면 s_season = '001'로 지정. e_season == null 이면 e_season = '018'    
-# 3. s_season <= e_season
-# 4. s_season == e_season이면 s_pr <= e_pr
-
 def param_validate(paramdict):
     ssk = paramdict['s_season'] if paramdict.get('s_season') != None else '001'
     spk = paramdict['s_pr'] if paramdict.get('s_pr') != None else '201|1'
@@ -66,10 +187,9 @@ def param_validate(paramdict):
         return
 
     return {'s_seaon': ssk, 's_pr' : spk, 'e_season': esk, 'e_pr': epk, 'part': partk}
-    
-# 특정 값을 요청하는 경우
-# 팀 누적 기록 중 '도드람 2021-2022 V-리그' 시즌 부터의 기록 요청
 
+# 특정 값을 요청하는 경우
+# 팀 누적 기록 중 '도드람 2021-2022 V-리그' 시즌의 '공격' 기록 요청
 def param_call(paramdict):
     params = param_validate(paramdict) # 파라미터 요청 전 예외처리
     html_spec = requests.get(init_url, verify=False, params=params)
@@ -105,12 +225,10 @@ param_dict = {'s_season':'018', 'part':'at'}
 table_data_dict = param_call(param_dict)
 
 df = pd.DataFrame(data=table_data_dict['data'], columns=table_data_dict['cols'])
-df
 
 # 모든 값을 요청하는 경우
 # 위에서 추출한 파라미터 정보 이용
 # 위의 특정값 요청하는 경우에서 사용한 함수 동일사용
-
 for name in param_names:
     for dict_key in locals()[str(name) + '_dict'].keys(): # dict_key = 's_season'
         print("param_name :::: " + name + " && key :::: " + dict_key)
@@ -118,11 +236,10 @@ for name in param_names:
         table_data_dict = param_call({name:dict_key})
 
         df = pd.DataFrame(data=table_data_dict['data'], columns=table_data_dict['cols'])
-        df
 ```
 
 ***
-# 현재 코드 문제점
+## 7. 현재 코드 문제점
  1. 예외 발생 시 로깅 필요
  2. 시즌마다 round에서 없는 값이 있음 -> 에러 발생  
     사이트에선 goRound() 함수를 사용해 시즌 선택 시 라운드 콤보의 값을 받아오도록 되어있음
